--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -6,6 +6,8 @@
 }
 @media (min-width: 1400px) {
 	.container {max-width: 1370px;}
+
+.sliderSec .carousel-inner { width: 100% !important;}
 }
 @media (min-width: 1500px) {}
 @media (max-width: 1366px) {}
