--- a/src/Components/Pages/Shopdetail.css
+++ b/src/Components/Pages/Shopdetail.css
@@ -9,9 +9,14 @@ p.Msg { font-size: 12px; color: #f7931b; position: relative; top: -10px;}
 .productInfo table {width: 100%; text-align: left;}
 .productInfo table tr td:first-child:before { content: '';background: #f7931b;width: 5px;    height: 1px;    position: absolute;    right: 10px;    top: 10px;}
 .productInfo table tr td:first-child { position: relative;}
-.sliderSec .carousel-inner { width: 652px; height: 450px; overflow: hidden; vertical-align: middle;}
+
 .sliderSec a.carousel-control-prev span.visually-hidden, .sliderSec a.carousel-control-next span.visually-hidden {display: none;}
 .rightSec h2 { font-size: 25px;}
 .sliderSec {  padding: 30px 10px;}
 h2.title_combo { font-size: 30px;}
 h5.catagories { font-size: 11px;}
+
+@media (max-width:1920px){
+    .sliderSec .carousel-inner { width: 100%; height: 450px; overflow: hidden; vertical-align: middle;}
+  }
+  
