--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -10,14 +10,19 @@
 	.searchBody { width: 35.2%;}
 }
 @media (min-width: 1500px) {}
-@media (max-width: 1366px) {}
-@media (max-width: 1280px) {}
-@media (max-width: 1199px) {}
-@media (max-width: 1024px) {}
-@media (max-width: 991px) {
-	h1 {
-  font-size: 40px;
+@media (max-width: 1366px) {
+	table.cartSection.cartth tr th:first-child {width: 66%;	}
 }
+@media (max-width: 1280px) {}
+@media (max-width: 1199px) {table.cartSection.cartth tr th:first-child {width: 60%;	}}
+@media (max-width: 1024px) {
+	table.cartSection.cartth tr th:first-child {
+		width: 40%;
+	}
+}
+@media (max-width: 991px) {
+	
+	h1 { font-size: 40px;}
 
 h2 {
   font-size: 30px;
@@ -57,6 +62,10 @@ h5 {
 	
 }
 @media (max-width: 767px) {
+	.cartImgSect img {
+		width: 36%;
+		padding-right: 10px;
+	}
 	h1 { font-size: 34px;}
 	h2 { font-size: 28px;}
 	.scrollDownIc img { width: 22px;}
