--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1513,3 +1513,71 @@ button.addCountIcon.negtv {
   position: relative;
   left: 0;
 }
+
+
+
+
+.cartImgSect {
+  display: flex;
+  justify-content: left;
+  align-items:center ;
+}
+.cartImgSect img {
+  width: 20%;
+  padding-right: 10px;
+  height: 120px;
+}
+h5.cartTitle {
+  padding: 10px 10px;
+  font-size: 14px;
+}
+.cartImgSect h5 span {
+  display: block;
+  padding: 5px 0px;
+  font-size: 12px;
+}
+.cartImgSect h5 {
+  font-size: 18px;
+}
+.cartImgSect {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding: 12px 0;
+}
+.Count button.addCountIcon {
+  background: #f7931b;
+  color: #fff;
+  padding: 1px 5px;
+  border: none;
+  text-align: right;
+  position: relative;
+  left: 26%;
+}
+.Count span {padding: 0px 5px;}
+.Count { border: 1px solid #292727; width: 40%;}
+button.addCountIcon.negtv { left: 0;}
+.cartBody{position: relative;}
+
+.cartBody:before {
+  content: '';
+  background-color: #3a3a3a;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  left: 0;
+  top: 22%;
+}
+.cartBody .row > div {
+  border-right: 1px solid #3a3a3a;
+}
+.cartBody { padding: 0;}
+.cartImgSect {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding: 0px 10px 10px 10px;
+}
+.cartBody .row > div:last-child{
+  border-right: 0px;
+}
