--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1073,14 +1073,14 @@ footer a img { width: 65%;}
 
 /* New Css Nik */
 
-li.nav-item.afterLogin { text-align: center;}
+/* li.nav-item.afterLogin { text-align: center;} */
 li.nav-item.afterLogin span { font-size: 13px; position: absolute; top: -17px; right: 24px;}
 .secondNavbar .navbar-nav {  justify-content: end;}
 header { height: 103px;border: 1px solid #333;}
 .secondNavbar { padding: 10px 0px; position: relative; right: 0; top: -28px;}
-.toNv:before { content: ''; background: #f7931b; position: absolute; width: 98%; height: 100%; right: -7%; z-index: -2; border-top-left-radius: 50px;}
+.toNv:before { content: ''; background: #f7931b; position: absolute; width: 80%; height: 100%; right: 0%; z-index: -2; border-top-left-radius: 50px;}
 .toNv{position: relative;z-index: 1;}
-.secondNavbar .navbar-nav:before { background: #333333; content: ''; position: absolute; width: 90%; height: 100%; right: -6%; z-index: -1; border-top-left-radius: 50px;}
+.secondNavbar .navbar-nav:before { background: #333333; content: ''; position: absolute; width: 75%; height: 100%; right: 0%; z-index: -1; border-top-left-radius: 50px;}
 .secondNavbar .navbar-nav {position: relative;  height: 43px;}
 a.navbar-brand { position: relative;top: 17px;left: -30px;}
 
@@ -1260,7 +1260,7 @@ a.nav-link.false { text-align: initial;}
 img.darkLogo { display: block;}
 img.whiteLogo { display: none;}
 button.sunMoonBtn { background: transparent; border: 0; position: relative; top: 7px;}
-.toNv ul.navbar-nav { padding-right: 15px;}
+/* .toNv ul.navbar-nav { padding-right: 15px;} */
 .navbarToggler:before,.navbarToggler:after {  background: #fff; }
 .dark .navbar-toggler.collapsed .navbarToggler { background-color: #fff;}
 ul.slick-dots { display: none !important;}
@@ -1444,27 +1444,12 @@ table.tikTable tr td:first-child { color: #f7931b; position: relative;}
 .carLottery .heroText { bottom: 0; color: #f1f1f1; width: 100%; padding: 20px;}
 video#myVideo { width: 100%;}
 .carLottery .container-fluid, .carLottery .heroText { padding: 0;}
-
-
 .autoCom { background: black; position: absolute; width: 30%; margin: 0 auto; left: 36%;  top: 60px;  padding: 10px; z-index: 1;}
 p.title { font-size: 14px; color: #f7931b; text-transform: capitalize; margin-bottom: 0px; font-weight: 700;}
 p.dec {font-size: 12px;}
 a.searchList {  border-bottom: 1px solid #f7931b38;}
-.imgIco img {
-  width: 41%;
-  text-align: center;
-}
-.imgIco {
-  width: 70px;
-  height: 70px;
-  background: #f7931b;
-  border-radius: 100px;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-}
+.imgIco img {  width: 41%;  text-align: center;}
+.imgIco {  width: 70px;  height: 70px;  background: #f7931b;  border-radius: 100px;  text-align: center;  display: flex;  align-items: center;  justify-content: center;  margin: 0 auto;}
 .iconSecT h5 { font-size: 14px; padding-top: 10px;}
 .iconSecT p { font-size: 17px; color: #f7931b; font-weight: 700;}
 .col-md-3.iconSecT { text-align: center;}
@@ -1472,112 +1457,58 @@ a.searchList {  border-bottom: 1px solid #f7931b38;}
 table.cartSection{ border: 1px solid #292727;}
 table.cartSection tr td,table.cartSection tr th { padding: 10px; border-bottom: 1px solid #292727; border-right: 1px solid #292727;}
 h2.title_combo.title_Center.casrt { padding-bottom: 35px;}
-button.removeBtn {
-  border: 1px solid #f7931b;
-  color: #f7931b;
-  background: transparent !important;
-  padding: 1px 10px;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-p.proName {
-  font-size: 16px;
-  color: #f7931b;
-  margin-bottom: 0;
-}
-p.size {
-  margin-bottom: 0;
-}
-table.cartSection.cartth tr th:first-child {
-  width: 70%;
-}
-
-.count span {
-  padding: 10px;
-}
-.count {
-  border: 1px solid #292727;
-  width: 50%;
-}
-button.addCountIcon {
-  background: #f7931b;
-  color: #fff;
-  padding: 1px 5px;
-  border: none;
-  text-align: right;
-  position: relative;
-  right: -11px;
-}
-button.addCountIcon.negtv {
-  position: relative;
-  left: 0;
-}
-
-
-
-
-.cartImgSect {
-  display: flex;
-  justify-content: left;
-  align-items:center ;
-}
-.cartImgSect img {
-  width: 20%;
-  padding-right: 10px;
-  height: 120px;
-}
-h5.cartTitle {
-  padding: 10px 10px;
-  font-size: 14px;
-}
-.cartImgSect h5 span {
-  display: block;
-  padding: 5px 0px;
-  font-size: 12px;
-}
-.cartImgSect h5 {
-  font-size: 18px;
-}
-.cartImgSect {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  padding: 12px 0;
-}
-.Count button.addCountIcon {
-  background: #f7931b;
-  color: #fff;
-  padding: 1px 5px;
-  border: none;
-  text-align: right;
-  position: relative;
-  left: 26%;
-}
+button.removeBtn { border: 1px solid #f7931b; color: #f7931b; background: transparent !important; padding: 1px 10px; font-size: 12px; text-transform: uppercase;letter-spacing: 1px;}
+p.proName { font-size: 16px; color: #f7931b;  margin-bottom: 0;}
+p.size { margin-bottom: 0;}
+table.cartSection.cartth tr th:first-child { width: 70%;}
+.count span { padding: 10px;}
+button.addCountIcon { background: #f7931b; color: #fff; padding: 1px 5px; border: none; text-align: right; position: relative; right: -11px;}
+button.addCountIcon.negtv { position: relative; left: 0;}
+.cartImgSect { display: flex; justify-content: left; align-items:center ;}
+.cartImgSect img { width: 20%; padding-right: 10px; height: 120px;}
+h5.cartTitle { padding: 10px 10px; font-size: 14px;}
+.cartImgSect h5 span { display: block; padding: 5px 0px; font-size: 12px;}
+.cartImgSect h5 { font-size: 18px;}
+.cartImgSect { display: flex; justify-content: left;  align-items: center;  padding: 12px 0;}
+.Count button.addCountIcon {  background: #f7931b;  color: #fff;  padding: 1px 5px;  border: none;  text-align: right;  position: relative;  left: 26%;}
 .Count span {padding: 0px 5px;}
-.Count { border: 1px solid #292727; width: 40%;}
+.Count { border: 1px solid #292727; width: 52%;}
 button.addCountIcon.negtv { left: 0;}
 .cartBody{position: relative;}
-
-.cartBody:before {
-  content: '';
-  background-color: #3a3a3a;
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  left: 0;
-  top: 22%;
-}
-.cartBody .row > div {
-  border-right: 1px solid #3a3a3a;
-}
+.cartBody:before {  content: '';  background-color: #3a3a3a;  position: absolute;  width: 100%;  height: 1px;  left: 0;  top: 22%;}
+.cartBody .row > div { border-right: 1px solid #3a3a3a;}
 .cartBody { padding: 0;}
-.cartImgSect {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  padding: 0px 10px 10px 10px;
-}
-.cartBody .row > div:last-child{
-  border-right: 0px;
+.cartImgSect { display: flex; justify-content: left; align-items: center; padding: 0px 10px 10px 10px;}
+.cartBody .row > div:last-child{ border-right: 0px;}
+tr.right-align .btn { margin: 0px 5px;}
+tr.right-align { text-align: right;}
+.cartImg { height: 100px; width: 100px; overflow: hidden; display: flex; align-items: center; justify-content: center;}
+.vehicleSub .table td, .vehicleSub .table th { padding: 0.75rem; vertical-align: top; border-bottom: 1px solid #f7931b2b; color: #fff; border-top: 0px solid #dee2e6;}
+td.actionBtn { text-align: right;}
+td.actionBtn button { background: #f7931b; color: #fff; padding: 5px 10px; border-radius: 100%; border: none; margin: 2px; text-align: right; font-size: small;}
+td.actionBtn { display: flex; justify-content: flex-end; padding: 1rem !important;}
+td.actionBtn { display: flex; justify-content: flex-end; padding: 1rem !important;}
+.merchant .cartImg { height: 30px; width: 50px;}
+li.nav-item.afterLogin { position: relative;  padding:8px;}
+li.nav-item.AddtCrt { top: 10px; position: relative; z-index: 0;}
+.secondNavbar .navbar-nav li.AddtCrt:hover { border-bottom: 0px !important;}
+li.nav-item.AddtCrt span.count { top: -10px; position: relative; background: #dc3545; padding: 2px 7px; border-radius: 50px; font-size: 13px;}
+.dropdown-content { right: -70px;}
+
+ul.navbar-nav { padding-right: 50px;}
+.secondNavbar .navbar-nav { top: 10px;}
+
+
+
+
+
+
+
+
+
+
+
+
+a.btn.btn-danger {
+  display: none;
 }
