--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -20,6 +20,7 @@
 	.navbar-brand img {width: 135px;}
 	.navbar-nav .nav-link {	padding: 8px 12px !important;	}
 	.secondNavbar .navbar-nav:before {width: 82%;	}
+	.secondNavbar .navbar-nav { top: 10px;}
 }
 @media (max-width: 1199px) {
 	table.cartSection.cartth tr th:first-child {width: 60%;	}
@@ -69,6 +70,7 @@ h5 {
 .sidebarPostRow {display: flex; flex-wrap: wrap;}
 .sidebarPost{    width: 50%; padding-left: 2px;
     padding-right: 2px;}
+	
 
 }
 @media (max-width: 860px) {}
@@ -113,8 +115,8 @@ h5 {
 	.makes_Slide.arrowTop_Slide .card_post {width: 100%;}
 	ul.bidList_.info_ li {width: 100%;}
 	.toNv {  position: relative; z-index: 1;  padding-top: 40px;}
-	.toNv:before { content: ''; background: #f7931b; position: absolute; width: 100%; height: 100%; right: 0; z-index: -2;  border-top-left-radius: 0px; top: 30px;}
-	a.navbar-brand { position: relative;  top: 17px;  left: -7px;}
+	.toNv:before { content: ''; background: #f7931b; position: absolute; width: 100%; height: 70vh; right: 0; z-index: -2;  border-top-left-radius: 0px; top: 30px;}
+	a.navbar-brand { position: relative;  top: 17px;  left: 10px;}
 	.slick-slide { margin: 0 0px;}
 	.nextArrow { position: absolute; bottom: -39px;left: calc(50% - 145px);}
 	h1.animate-charcter {font-size: 115px !important;}
