--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 /* .light{
     background-color: red;
 } */
+
+.unselectable {
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    color: #cc0000;
+    width: 100%;
+    word-break: break-word;
+  }
