--- a/src/Assets/css/lightMode.css
+++ b/src/Assets/css/lightMode.css
@@ -59,3 +59,12 @@ body.light{  background-color: #fff; color: #000;}
 .light .modal-content {    background-color: #fff;}
 .light .ProcessPymt img { border: 1px solid #cbcbcb;  background: #ffffff;}
 .light .payTPop button { color: #000;}
+.light .vehicleSub .table tr {
+    padding: 0.75rem;
+    vertical-align: top;
+    border-bottom: 1px solid #f7931b2b;
+    color: #000;
+    border-top: 0px solid #dee2e6;
+}
+.light .autoCom { background: #ececec; position: absolute; width: 30%; margin: 0 auto; left: 45%;  top: 60px;  padding: 10px; z-index: 1;}
+.light .autoCom p.title { color: #f7931b;}
