--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -87,7 +87,20 @@ input:focus,
 button:focus {
   outline: none;
 }
+select{
+  -webkit-appearance: none; 
+-moz-appearance: none;
+appearance: none;
 
+-moz-border-radius: 0px;
+-webkit-border-radius: 0px;
+border-radius: 0px;
+background: url(http://dropdown/arrow/url/) no-repeat;
+background-position: right center;
+background-color: #CCCCCC;
+color: #000000;
+border: 1px solid #000000;
+}
 button {
   transition: ease-in-out 0.3s;
 }
@@ -1101,7 +1114,7 @@ p.priceDateList span {font-size: 16px; color: #f7931a; font-weight: 600;}
 .dropdown-content a.nav-link:hover { color: #f7931a !important;}
 
 .secondNavbar .navbar-nav li:hover { border-bottom: 5px solid #f7931a; transition: 0.5s; color: #f7931a;}
-.secondNavbar .navbar-nav li:hover a { color: #f7931a;}
+
 
 .sellerInfo { width: 70%;}
 p.sallerName { font-size: 18px; font-weight: 600; color: #7e7e7e;margin-bottom: 0;}
@@ -1496,7 +1509,7 @@ li.nav-item.AddtCrt { top: 10px; position: relative; z-index: 0;}
 li.nav-item.AddtCrt span.count { top: -10px; position: relative; background: #dc3545; padding: 2px 7px; border-radius: 50px; font-size: 13px;}
 .dropdown-content { right: -70px;}
 ul.navbar-nav { padding-right: 50px;}
-.secondNavbar .navbar-nav { top: 0;}
+.secondNavbar .navbar-nav {top: -6px;}
 a.navbar-brand {left: 20px;}
 td.actionBtn.vs button { border-radius: 5px;}
 td.actionBtn.vs .btn { padding: 6px 14px; font-size: 12px; font-weight: 100;border-radius: 5px;text-transform: unset; height: 30px; margin-top: 2px;}
