--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1644,3 +1644,16 @@ a.searchList {
   left: 0;
   z-index: 9999999;
 }
+
+.mainImg img {
+  width: 100%;
+  height: fit-content;
+}
+.mainImg {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  margin-bottom: 25px;
+  display: flex;
+  align-items: center;
+}
