--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1677,3 +1677,7 @@ ul.img_sec li a img {
 }
 
 .dealer .postTopOption { background-color: #0000006b;}
+
+.plan_cardBody { min-height: 195px;}
+.dfk h5 { padding-top: 7%;}
+.mt-50 { margin-top: 50px;}
