--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -77,6 +77,9 @@ h5 { font-size: 18px;}
 	
 }
 @media (max-width: 767px) {
+	.plan_cardBody {
+		min-height: auto;
+	}
 	span.plan_Time small {right: 20px;}
 	.cartImgSect img {
 		width: 36%;
@@ -130,8 +133,10 @@ h5 { font-size: 18px;}
 	.featuredAuctions_Slide.delair .card_post {display: block;	}
 	ul.img_sec {width: 100%;margin-right: 10px;	}
 	section.ptb_80.mobileSpec {	margin-top: 250px;}
-	.nextArrow {position: absolute;	bottom: -298px;}
+	.featuredAuctions_Slide.delair .nextArrow {bottom: -298px !important;}
 	.Latest_B {	display: block;	height: 100%;}
+	.autoCom {width: 100%;margin: 0 auto;left: 0;top: 35px;}
+	h1 {font-size: 2.5em;}
 }
 
 @media (max-width: 575px) {
@@ -157,6 +162,7 @@ h5 { font-size: 18px;}
 	.orderStep li:last-child:before { width: 3px; display: none;}
 	.orderStep li:after{top: 0px; left: 8px;}
 	.orderStep li.active:last-child:after {top: 0px;}
+	
 
 }
 @media (max-width: 480px) {
@@ -168,6 +174,13 @@ h5 { font-size: 18px;}
 	.imgGalleryRow .fancyCol, 
 	.videoGalleryRow .fancyCol {/*height: 120px;*/}
 	.orderImg{width: 100%; height: 150px;}
+	h1 {
+		font-size: 2.5em;
+	}
 }
 @media (max-width: 414px) {}
-@media (max-width: 375px) {}
+@media (max-width: 375px) {
+	h1 {
+    font-size: 2.5em;
+}
+}
