--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -8,6 +8,10 @@
 	.container {max-width: 1370px;}
 	.sliderSec .carousel-inner { width: 100% !important;}
 	.searchBody { width: 35.2%;}
+	
+}
+@media (max-width: 1400px) {
+	
 	.autoCom {
 		
 		width: 28%;
@@ -35,6 +39,7 @@
 		width: 31.5%;
 		left: 42.6%;
 	}
+	
 
 }
 @media (max-width: 1199px) {
@@ -45,17 +50,30 @@
 .plan_cardHead .plan_Price {font-size: 33px;}
 .plan_card { padding: 20px;}
 .plan_cardBody { min-height: 258px;}
-
+.navbar-brand img {
+    width: 161px !important;}
+	.secondNavbar .navbar-nav:before {
+		width: 82%;
+	}
+	.secondNavbar .navbar-nav {
+		top: 13px;
+	}
+	.searchForm input {
+		width: 100%;
+	}
 
 }
 @media (max-width: 1024px) {
+	.secondNavbar .navbar-nav {
+		top: 10px;
+	}
 	table.cartSection.cartth tr th:first-child {
 		width: 40%;
 	}
 	.navbar-nav .nav-link {padding: 8px 8px !important;	}
 	.navbar-brand img {	width: 180px !important;}
 	.secondNavbar .navbar-nav:before {width: 80%;	}
-	
+	.mobileOnlyHide{display: block;}
 	
 }
 @media (max-width: 991px) {
@@ -75,25 +93,88 @@ h5 { font-size: 18px;}
 .activeListView .card_postInfo h4{width: 100%; padding-right: 0;}
 .sidebarPostRow {display: flex; flex-wrap: wrap;}
 .sidebarPost{    width: 50%; padding-left: 2px;   padding-right: 2px;}
+.navbar-expand-md .navbar-toggler {
+    display: block;
+    position: relative;
+    right: 20px;
+    top: 15px;
+}
+.toNv {  display: none;}
 
-
+ul.navbar-nav.mobileOnly { display: none;}
+.navbar-collapse.mobileOnly.collapse.show {
+    display: block;
+    position: absolute;
+    width: 100%;
+    background-color: #f79117;
+    height: 100vh;
+    top: 100px;
+    z-index: 999;
+    color: #fff;
+    left: 0;
+}
+.mobileOnly {
+    display: block;
+}
+ul.navbar-nav.mNone {
+    display: block;
+}
+.dddd {
+	display: block;
+	margin-left: auto;
+  }
+  button.sunMoonBtn { left: 87%;  top: -217px;}
+  .light button.sunMoonBtn img {
+	width: 24px;
+	height: 24px;
+	filter: brightness(0.5);
+  }
+  .navbar-expand-md .navbar-nav { width: 100%;}
+  ul.navbar-nav { padding-right: 0;}
+  .mobileOnly form.searchForm {
+    width: 39%;
+}
+.navbar-collapse.mobileOnly.collapse.show .mobileOnly {
+    display: block;
+}
+.featuredAuctions_Slide.delair .card_post {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly !important;
+    width: 95%;
+    margin: 0 auto;
+}
+.featuredAuctions_Slide.delair .card_postImg {
+    display: contents;
+}
 }
 @media (max-width: 860px) {
 	.dfk h5 {font-size: 15px;}
 .plan_cardHead .plan_Price {font-size: 33px;}
 .plan_card { padding: 20px;}
 .plan_cardBody { min-height: 258px;}
+.mobileOnlyHide{display: none;}
+
 	
 }
 @media (max-width: 768px) {}
 @media (min-width: 768px){
 	
-	.mobileOnly{display: none;}
+	.mobileOnly{display: block;}
 	.makes_Slide.arrowTop_Slide .card_post {width: 33.33%;}
 	ul.bidList_.info_ li {width: 50%;}
 	
 }
 @media (max-width: 767px) {
+	.mobileOnly form.searchForm {
+		width: 100%;
+	}
+	.navbar-expand-md .navbar-toggler {
+		display: block;
+		position: relative;
+		
+		top: 8px;
+	}
 	.plan_cardBody {
 		min-height: auto;
 	}
@@ -106,7 +187,7 @@ h5 { font-size: 18px;}
 	h2 { font-size: 28px;}
 	.scrollDownIc img { width: 22px;}
 	.copyRight p{margin-top: 15px;}
-	.mobileOnlyHide{display: none;}
+	
 	.navbar-brand img{height: 40px;}
 	.arrowTop_Slide .slide-arrow{bottom: -30px; top: unset;}
 	.arrowTop_Slide .prev-arrow{left: calc(50% - 140px); }
@@ -140,7 +221,17 @@ h5 { font-size: 18px;}
 	img.carGif {width: 100%;}
 	.containerSec {height: 81vh;}
 	a.navbar-brand {top: 0;}
-	button.sunMoonBtn {position: absolute;z-index: 999;border: 1px solid;background: transparent;padding: 7px;border-radius: 5px;border: none;top: -44px;left: 76%; }
+	button.sunMoonBtn {
+		position: absolute;
+		z-index: 999;
+		border: 1px solid;
+		background: transparent;
+		padding: 7px;
+		border-radius: 5px;
+		border: none;
+		top: -79px;
+		left: 76%;
+	}
 	.light button.sunMoonBtn {filter: brightness(0.5);}
 	.post-excerpt {padding: 0px 10px;text-align: justify; }
 	section.ptb_80.blogPostText.rf {text-align: center;}
